force-app/main/default/objects/Opportunity/fields/Mortgage_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Opportunity_Status__c</fullName>
    <label>Mortgage Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Inquiry</fullName>
            </value>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
                <default>true</default>
                <label>Initial Contact</label>
            </value>
            <value>
                <fullName>Quote Given</fullName>
            </value>
            <value>
                <fullName>Prequalified</fullName>
            </value>
            <value>
                <fullName>Preapproved</fullName>
            </value>
            <value>
                <fullName>Converted to Loan</fullName>
            </value>
            <value>
                <fullName>Call Attempt 1</fullName>
            </value>
            <value>
                <fullName>Call Attempt 2</fullName>
            </value>
            <value>
                <fullName>Call Attempt 3</fullName>
            </value>
            <value>
                <fullName>Call Attempt 4</fullName>
            </value>
            <value>
                <fullName>Call Attempt 5</fullName>
            </value>
            <value>
                <fullName>Call Attempt 6</fullName>
            </value>
            <value>
                <fullName>Need to Nurture</fullName>
            </value>
            <value>
                <fullName>Contact Later</fullName>
            </value>
            <value>
                <fullName>Comparing Lenders</fullName>
            </value>
            <value>
                <fullName>Rate Shopping</fullName>
            </value>
            <value>
                <fullName>House Hunting</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>On Hold Per Request</fullName>
            </value>
            <value>
                <fullName>Pre-Application Work</fullName>
            </value>
            <value>
                <fullName>Add to Do Not Call</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>