force-app/main/default/objects/Opportunity/fields/Mortgage_Product__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is required. Please select &quot;other&quot; if unknown.</inlineHelpText>
    <label>Mortgage Product (required)</label>
    <referenceTo>Mortgage_Product__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>