force-app/main/default/objects/Opportunity/fields/Name_of_Financial_Planner__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Financial_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the FNBO Financial Planner this customer has worked with</inlineHelpText>
    <label>Name of Financial Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>