force-app/main/default/objects/Opportunity/fields/New_Investment_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Investment_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will allow users to indicate if the Opportunity is creating a new investment client.</description>
    <inlineHelpText>Check this box if the client is a brand new-to-FN investment client, within the last 12 months.</inlineHelpText>
    <label>New Investment Client</label>
    <type>Checkbox</type>
</CustomField>