force-app/main/default/objects/Opportunity/fields/New_Money__c.field-meta.xml
<CustomField>
    <fullName>New_Money__c</fullName>
    <description>New or Additional Loan Comitment to the Bank</description>
    <inlineHelpText>New portion (if any) of Loan Comitment</inlineHelpText>
    <label>New Money ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>