force-app/main/default/objects/Opportunity/fields/New_Wealth_Client_Source__c.field-meta.xml
<CustomField>
    <fullName>New_Wealth_Client_Source__c</fullName>
    <label>New Wealth Client Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>External COI</fullName>
            </value>
            <value>
                <fullName>Referred by Client</fullName>
            </value>
            <value>
                <fullName>Referred Internally - Wholesale</fullName>
            </value>
            <value>
                <fullName>Referred Internally - Non Wholesale</fullName>
            </value>
            <value>
                <fullName>Advisor Sourced</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>