force-app/main/default/objects/Opportunity/fields/New_Wealth_Relationship__c.field-meta.xml
<CustomField>
    <fullName>New_Wealth_Relationship__c</fullName>
    <formula>IF( OR( TEXT(Type)=&quot;New Wealth Client&quot;, TEXT(Type)=&quot;Existing Client - New Line of Business&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># New Wealth Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>