force-app/main/default/objects/Opportunity/fields/of_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>of_Closed_Lost__c</fullName>
    <description>This allows for lost calculations in the Sales Velocity dashboard</description>
    <formula>if(Probability =0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Closed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>