force-app/main/default/objects/Opportunity/fields/of_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>of_Closed_Won__c</fullName>
    <description>This allows for won calculations in the Sales Velocity dashboard</description>
    <formula>if(Probability =1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>