force-app/main/default/objects/Opportunity/fields/Old_Money__c.field-meta.xml
<CustomField>
    <fullName>Old_Money__c</fullName>
    <description>Used to determine Old &quot;Existing&quot; loan money for Washington County Bank</description>
    <inlineHelpText>Existing Loan Comitment</inlineHelpText>
    <label>Old Money ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>