force-app/main/default/objects/Opportunity/fields/One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees__c</fullName>
    <inlineHelpText>This field is for one time / upfront fees ONLY</inlineHelpText>
    <label>One Time Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>