force-app/main/default/objects/Opportunity/fields/Open_Closed__c.field-meta.xml
<CustomField>
    <fullName>Open_Closed__c</fullName>
    <description>This field is used to separate out the historical vs open opportunities for the Sales Velocity Dashboard</description>
    <formula>if(OR(Probability =1,Probability =0),&quot;Historical&quot;,&quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Closed</label>
    <type>Text</type>
</CustomField>