force-app/main/default/objects/Opportunity/fields/Opp_Created_from_Referral__c.field-meta.xml
<CustomField>
    <fullName>Opp_Created_from_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by a Process Builder flow when an Opportunity is created from a referral</description>
    <label>Opp Created from Referral</label>
    <type>Checkbox</type>
</CustomField>