force-app/main/default/objects/Opportunity/fields/Opp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opp_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opp Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>