force-app/main/default/objects/Opportunity/fields/OPP_ROE_Delta__c.field-meta.xml
<CustomField>
    <fullName>OPP_ROE_Delta__c</fullName>
    <formula>(PLNDR__FS_ROE__c - PLNDR__FS_Target_ROE__c)/100* PLNDR__FS_Average_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP ROE Delta $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>