force-app/main/default/objects/Opportunity/fields/Opp_Role__c.field-meta.xml
<CustomField>
    <fullName>Opp_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <label>Opp Role</label>
    <type>Text</type>
</CustomField>