force-app/main/default/objects/Opportunity/fields/Opp_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Status__c</fullName>
    <formula>IF(   AND(MONTH(CloseDate)=MONTH( TODAY()),Year(CloseDate)=Year(TODAY())) , &quot;Close Date this Month&quot;,  IF( Probability &lt;0.5, &quot;&lt;50% chance to close&quot;,&quot;&gt;=50% chance to close&quot;) )</formula>
    <label>Opp Status</label>
    <type>Text</type>
</CustomField>