force-app/main/default/objects/Opportunity/fields/Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Type__c</fullName>
    <label>Opp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>CoBrand</fullName>
            </value>
            <value>
                <fullName>PLCC</fullName>
            </value>
            <value>
                <fullName>UCL</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>