force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_ID__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner ID</label>
    <type>Text</type>
</CustomField>