force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Profile__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <label>Opportunity Owner Profile</label>
    <type>Text</type>
</CustomField>