force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <label>Opportunity Owner Role</label>
    <type>Text</type>
</CustomField>