force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <inlineHelpText>This is the &quot;source&quot; of the opportunity, this is for FNTS</inlineHelpText>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Data Upload</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Executive Summit</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
            </value>
            <value>
                <fullName>Outbound Letter</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Phone In</fullName>
            </value>
            <value>
                <fullName>Phone Out</fullName>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>