force-app/main/default/objects/Opportunity/fields/Original_LO__c.field-meta.xml
<CustomField>
    <fullName>Original_LO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original LO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>