force-app/main/default/objects/Opportunity/fields/Original_LTV__c.field-meta.xml
<CustomField>
    <fullName>Original_LTV__c</fullName>
    <label>Original LTV</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>