force-app/main/default/objects/Opportunity/fields/Other_AP_Software__c.field-meta.xml
<CustomField>
    <fullName>Other_AP_Software__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populate this field if AP Software Type is Other.</inlineHelpText>
    <label>Other AP Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>