force-app/main/default/objects/Opportunity/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Separate Competitors by a comma</inlineHelpText>
    <label>Competitor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>