force-app/main/default/objects/Opportunity/fields/Other_Resources__c.field-meta.xml
<CustomField>
    <fullName>Other_Resources__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Resources</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>