force-app/main/default/objects/Opportunity/fields/Owner_as_Picklist_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Owner_as_Picklist_Hidden__c</fullName>
    <description>This field is used to ensure standared dashboard colors for users</description>
    <label>Owner as Picklist - Hidden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Martens</fullName>
                <color>#0B6FCE</color>
                <label>Aaron Martens</label>
            </value>
            <value>
                <fullName>Aaron Winters</fullName>
                <color>#78C953</color>
                <label>Aaron Winters</label>
            </value>
            <value>
                <fullName>Abbie Stanfill</fullName>
                <color>#E27001</color>
                <label>Abbie Stanfill</label>
            </value>
            <value>
                <fullName>Adam DeLaughter</fullName>
                <color>#A845DC</color>
                <label>Adam DeLaughter</label>
            </value>
            <value>
                <fullName>Al Hansen</fullName>
                <color>#F3D904</color>
                <label>Al Hansen</label>
            </value>
            <value>
                <fullName>Alden Sherman</fullName>
                <color>#A53711</color>
                <label>Alden Sherman</label>
            </value>
            <value>
                <fullName>Alec Gorynski</fullName>
                <color>#66E9BD</color>
                <label>Alec Gorynski</label>
            </value>
            <value>
                <fullName>Alissa Dehl</fullName>
                <color>#0B24BE</color>
                <label>Alissa Dehl</label>
            </value>
            <value>
                <fullName>Amanda Brown</fullName>
                <color>#419249</color>
                <label>Amanda Brown</label>
            </value>
            <value>
                <fullName>Amber Carruthers</fullName>
                <color>#B6E32E</color>
                <label>Amber Carruthers</label>
            </value>
            <value>
                <fullName>Ammone Phimvongsa</fullName>
                <color>#641CCF</color>
                <label>Ammone Phimvongsa</label>
            </value>
            <value>
                <fullName>Amy Sue Bliss</fullName>
                <color>#F96FB7</color>
                <label>Amy Sue Bliss</label>
            </value>
            <value>
                <fullName>Andy Frahm</fullName>
                <color>#2F5D85</color>
                <label>Andy Frahm</label>
            </value>
            <value>
                <fullName>Andy Max</fullName>
                <color>#AFCADF</color>
                <label>Andy Max</label>
            </value>
            <value>
                <fullName>Anna Lisa Real</fullName>
                <color>#8F6429</color>
                <label>Anna Lisa Real</label>
            </value>
            <value>
                <fullName>Ashley Postlewait</fullName>
                <color>#EFAE73</color>
                <label>Ashley Postlewait</label>
            </value>
            <value>
                <fullName>Audrea Kappert</fullName>
                <color>#57F17C</color>
                <label>Audrea Kappert</label>
            </value>
            <value>
                <fullName>Audrey Cosgrove</fullName>
                <color>#0B6FCE</color>
                <label>Audrey Cosgrove</label>
            </value>
            <value>
                <fullName>Augie Nguyen</fullName>
                <color>#78C953</color>
                <label>Augie Nguyen</label>
            </value>
            <value>
                <fullName>Autumn Forbes</fullName>
                <color>#E27001</color>
                <label>Autumn Forbes</label>
            </value>
            <value>
                <fullName>Aziz Inoyatov</fullName>
                <color>#A845DC</color>
                <label>Aziz Inoyatov</label>
            </value>
            <value>
                <fullName>Barry Gideon</fullName>
                <color>#F3D904</color>
                <label>Barry Gideon</label>
            </value>
            <value>
                <fullName>Becky Splichal</fullName>
                <color>#A53711</color>
                <label>Becky Splichal</label>
            </value>
            <value>
                <fullName>Bev Tasset</fullName>
                <color>#66E9BD</color>
                <label>Bev Tasset</label>
            </value>
            <value>
                <fullName>Bill Fisher</fullName>
                <color>#0B24BE</color>
                <label>Bill Fisher</label>
            </value>
            <value>
                <fullName>Bill Pitt</fullName>
                <color>#419249</color>
                <label>Bill Pitt</label>
            </value>
            <value>
                <fullName>Blaine Ross</fullName>
                <color>#B6E32E</color>
                <label>Blaine Ross</label>
            </value>
            <value>
                <fullName>Blake Suing</fullName>
                <color>#641CCF</color>
                <label>Blake Suing</label>
            </value>
            <value>
                <fullName>Bob Priest</fullName>
                <color>#F96FB7</color>
                <label>Bob Priest</label>
            </value>
            <value>
                <fullName>Boe Knapp</fullName>
                <color>#2F5D85</color>
                <label>Boe Knapp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>