force-app/main/default/objects/Opportunity/fields/Owner_Role_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_for_Reporting__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <label>Owner Role - for Reporting</label>
    <type>Text</type>
</CustomField>