force-app/main/default/objects/Opportunity/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; +  Owner.LastName</formula>
    <label>OwnerName</label>
    <type>Text</type>
</CustomField>