force-app/main/default/objects/Opportunity/fields/P_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>P_Card_Type__c</fullName>
    <label>P-Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not A P-Card Opportunity</fullName>
            </value>
            <value>
                <fullName>New_LG_bus_Card</fullName>
                <label>New LG Bus Card</label>
            </value>
            <value>
                <fullName>New VOX card</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>AP Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>