force-app/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>