force-app/main/default/objects/Opportunity/fields/Precision_Lender_Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>Precision_Lender_Opp_Type__c</fullName>
    <formula>If( PLNDR__FS_Loan_Commitment__c =  PLNDR__FS_Loan_Net_Commitment__c, &quot;New&quot;,&quot;Renewal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precision Lender Opp Type</label>
    <type>Text</type>
</CustomField>