force-app/main/default/objects/Opportunity/fields/Principle_Balance__c.field-meta.xml
<CustomField>
    <fullName>Principle_Balance__c</fullName>
    <label>Principle Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>