force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured Loan/LOC</fullName>
            </value>
            <value>
                <fullName>Unsecured Loan/LOC</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>CD/IRA</fullName>
            </value>
            <value>
                <fullName>Small Business Loan/LOC</fullName>
            </value>
            <value>
                <fullName>Small Business Credit Card</fullName>
            </value>
            <value>
                <fullName>Small Business Checking/Savings</fullName>
            </value>
            <value>
                <fullName>First at Work</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
                <isActive>false</isActive>
                <label>CD</label>
            </value>
            <value>
                <fullName>Conventional</fullName>
                <isActive>false</isActive>
                <label>Conventional</label>
            </value>
            <value>
                <fullName>Home Equity Line of Credit</fullName>
                <isActive>false</isActive>
                <label>Home Equity Line of Credit</label>
            </value>
            <value>
                <fullName>Home Equity Loan</fullName>
                <isActive>false</isActive>
                <label>Home Equity Loan</label>
            </value>
            <value>
                <fullName>Unsecured Line of Credit</fullName>
                <isActive>false</isActive>
                <label>Unsecured Line of Credit</label>
            </value>
            <value>
                <fullName>Unsecured Loan</fullName>
                <isActive>false</isActive>
                <label>Unsecured Loan</label>
            </value>
            <value>
                <fullName>VA</fullName>
                <isActive>false</isActive>
                <label>VA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>