force-app/main/default/objects/Opportunity/fields/Property_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>