force-app/main/default/objects/Opportunity/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>