force-app/main/default/objects/Opportunity/fields/Property_Zip__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>