force-app/main/default/objects/Opportunity/fields/Purchase_or_Refinance__c.field-meta.xml
<CustomField>
    <fullName>Purchase_or_Refinance__c</fullName>
    <label>Purchase or Refinance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>