force-app/main/default/objects/Opportunity/fields/Qualified_Pcard__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Pcard__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to include or exclude Pcards that meet a specific criteria for the 2015 CTS Pcard Campaign</description>
    <inlineHelpText>Checked means it is included</inlineHelpText>
    <label>Qualified Pcard</label>
    <type>Checkbox</type>
</CustomField>