force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <inlineHelpText>Reason Opportunity was Lost.</inlineHelpText>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adverse Credit Action</fullName>
            </value>
            <value>
                <fullName>Aged Out</fullName>
            </value>
            <value>
                <fullName>Agent Bank Rejected</fullName>
            </value>
            <value>
                <fullName>Better Offer</fullName>
            </value>
            <value>
                <fullName>Competitive Environment</fullName>
            </value>
            <value>
                <fullName>Competitor More Convenient</fullName>
            </value>
            <value>
                <fullName>Competitor offered a product we do not offer</fullName>
            </value>
            <value>
                <fullName>Contract Terms</fullName>
            </value>
            <value>
                <fullName>Credit Decline</fullName>
            </value>
            <value>
                <fullName>Credit Policy Variance</fullName>
            </value>
            <value>
                <fullName>Customer Elected Not to Proceed</fullName>
            </value>
            <value>
                <fullName>Customer working with another FNB employee/department</fullName>
            </value>
            <value>
                <fullName>Feature/Functionality</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Fees / Program Cost</fullName>
            </value>
            <value>
                <fullName>Interest Rate</fullName>
            </value>
            <value>
                <fullName>Lock Withdrawn</fullName>
            </value>
            <value>
                <fullName>No Guarantee Required</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>No Product</fullName>
            </value>
            <value>
                <fullName>Onerous Legal/Compliance/Documentation Requirements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other – Please Explain</fullName>
            </value>
            <value>
                <fullName>Press/Media Coverage</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Prospect elected to maintain current relationship</fullName>
            </value>
            <value>
                <fullName>Revenue Share / Rewards</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Terms/Structure</fullName>
            </value>
            <value>
                <fullName>Turndown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>