force-app/main/default/objects/Opportunity/fields/Referral_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Referral_Annual_Revenue__c</fullName>
    <description>Used to combine revenue fields for referral reporting</description>
    <formula>Annual_Revenue__c + PLNDR__FS_Pre_Tax_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>