force-app/main/default/objects/Opportunity/fields/Referred_AUM__c.field-meta.xml
<CustomField>
    <fullName>Referred_AUM__c</fullName>
    <description>Used to combine AUM fields (if there is ever a need for it) for referral reporting</description>
    <formula>Assets_under_Managment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>