force-app/main/default/objects/Opportunity/fields/Referred_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field can be used to reflect a past or current customer who referred this opportunity.  The customer must exist in Salesforce</inlineHelpText>
    <label>Referred by Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>