force-app/main/default/objects/Opportunity/fields/Referred_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Referred_Deposits__c</fullName>
    <description>Used to combined deposit fields for converted referral reporting</description>
    <formula>PLNDR__FS_Deposit_Average_Balance__c + Deposits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>