force-app/main/default/objects/Opportunity/fields/Referred_Loan_CMTs__c.field-meta.xml
<CustomField>
    <fullName>Referred_Loan_CMTs__c</fullName>
    <description>Used to roll all loans fields into one for converted referrals</description>
    <formula>PLNDR__FS_Loan_Net_Commitment__c + Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Loan CMTs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>