force-app/main/default/objects/Opportunity/fields/Related_Customer_CIXF__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_CIXF__c</fullName>
    <formula>Account.FNB_System_of_record_id__c</formula>
    <label>Related Customer CIXF</label>
    <type>Text</type>
</CustomField>